# gembedded

./: LICENSE  README.md  pom.xml
config/: settings.xml
gembedded-api/: Note.txt  pom.xml
gembedded-api/src/main/java/com/comert/gembedded/api/: ApplicationContextFactory.java  ApplicationException.java  ApplicationMessage.java
gembedded-api/src/main/java/com/comert/gembedded/api/device/: DeviceConfigurationException.java  DeviceConfigurationMessage.java  DeviceConstant.java  DeviceContext.java  DeviceExecutionException.java  DeviceExecutionMessage.java  DeviceIOException.java  DeviceIOMessage.java  Pin.java
gembedded-api/src/main/java/com/comert/gembedded/api/util/: InstanceCreationException.java  InstanceCreationValidator.java  InstanceExceptionMessage.java  InstanceMessage.java  ProviderException.java  ProviderExceptionMessage.java  ProviderFactory.java  ProviderMessage.java  ProviderValidator.java
gembedded-api/src/test/java/com/comert/gEmbedded/api/: ApplicationContextFactoryUTest.java
gembedded-api/src/test/java/com/comert/gEmbedded/api/testutil/: InstanceProducer.java  MultiThreadingTest.java  (+5 more)
gembedded-component/: pom.xml
gembedded-native/: build.xml  compile.sh  header.sh  pom.xml
gembedded-native/src/main/c/native/: CMakeLists.txt  Gcmake.properties  build.sh
gembedded-native/src/main/c/native/include/: clockmanager.h  com_comert_gembedded_device_nativeinterface_DeviceDriver.h  com_comert_gembedded_device_nativeinterface_GPIODriver.h  com_comert_gembedded_device_nativeinterface_I2CMasterDriver.h  com_comert_gembedded_device_nativeinterface_JNIUtil.h  com_comert_gembedded_device_nativeinterface_PWMDriver.h  common.h  devicedriver.h  gpiodriver.h  i2cmasterdriver.h  jniutil.h  mapper.h  pwmdriver.h
gembedded-native/src/main/c/native/source/: clockmanager.c  devicedriver.c  gpiodriver.c  i2cmasterdriver.c  jniutil.c  mapper.c  pwmdriver.c
gembedded-native/src/main/c/native/test/: commontest.hpp  devicedrivertest.cpp  devicedrivertest.hpp  jniutiltest.cpp  jniutiltest.hpp  jvm.cpp  jvm.hpp  jvm_test.c  jvm_test.h  mappertest.cpp  mappertest.hpp  test.cpp  test_config.cpp
gembedded-provider/: pom.xml
(+68 files in other folders)
